--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 		"@hono/node-server": "^1.5.0",
 		"hono": "^3.12.6",
 		"http-status-codes": "^2.3.0",
+		"postgrator": "^7.2.0",
+		"postgres": "^3.4.3",
 		"tsx": "^4.7.0",
 		"typescript": "^5.3.3",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/node": "^20.11.5",
 		"prettier": "^3.2.4"
 	}
 }
