Initial unit test setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,6 @@ jobs:
 
             - name: Compile
               run: npm run compile
+
+            - name: Unit tests
+              run: npm run test
