Adds coverage to tests on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
               run: npm run compile
 
             - name: Unit tests
-              run: npm run test
+              run: npm run test:coverage
