--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,5 @@
-DATABASE_URL=postgres://user:password@127.0.0.1:5432/bloggy
+DATABASE_URL=postgres://user:password@127.0.0.1:5432
 SERVER_PORT=8080
 JWT_KEY=changeme
+TEST_DATABASE_URL=postgres://docker:docker@0.0.0.0:5432
+TEST_DATABASE_NAME=bloggy_tests
