--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,19 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
+        services:
+            postgres:
+                image: postgres
+                env:
+                    POSTGRES_DB: bloggy_tests
+                    POSTGRES_USER: ci
+                    POSTGRES_PASSWORD: ci
+                options: >-
+                    --health-cmd pg_isready
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+
         steps:
             - uses: actions/checkout@v3
             - name: Setup node version
@@ -28,3 +41,7 @@ jobs:
 
             - name: Unit tests
               run: npm run test:coverage
+              env:
+                  TEST_DATABASE_URL: postgres://ci:ci@localhost:5432
+                  TEST_DATABASE_NAME: bloggy_tests
+                  JWT_KEY: fake
