--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,6 @@ jobs:
             - name: Unit tests
               run: npm run test:coverage
               env:
-                  TEST_DATABASE_URL: postgres://ci:ci@localhost:5432
+                  TEST_DATABASE_URL: postgres://ci:ci@127.0.0.1:5432
                   TEST_DATABASE_NAME: bloggy_tests
                   JWT_KEY: fake
