Adds port to ci database

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
                     POSTGRES_DB: bloggy_tests
                     POSTGRES_USER: ci
                     POSTGRES_PASSWORD: ci
+                ports:
+                    - 5432:5432
                 options: >-
                     --health-cmd pg_isready
                     --health-interval 10s
