--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@hono/node-server": "^1.5.0",
 		"bcrypt": "^5.1.1",
+		"date-fns": "^3.3.1",
 		"dotenv": "^16.4.1",
 		"drizzle-orm": "^0.29.3",
 		"hono": "^3.12.6",
