--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"hono": "^3.12.6",
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
+		"pg": "^8.11.3",
 		"postgrator": "^7.2.0",
-		"postgres": "^3.4.3",
 		"tsx": "^4.7.0",
 		"typescript": "^5.3.3",
 		"zod": "^3.22.4"
@@ -36,6 +36,7 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.11.5",
+		"@types/pg": "^8.11.0",
 		"@vitest/coverage-istanbul": "^1.2.1",
 		"prettier": "^3.2.4",
 		"vitest": "^1.2.1"
